--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,10 @@ include(CMakePrintHelpers)
 
 
 add_lib("${CMAKE_PROJECT_NAME}_lib"
-        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
+        SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/MovementController.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/MovementRequest.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
         )
 
 
